# snpOracle

./: .env.miner.template  .env.template  .env.validator.template  .flake8  .gitignore  .pre-commit-config.yaml  28a00-miner.config.js  28a01-miner.config.js  28a02-miner.config.js  Dockerfile.subtensor  Dockerfile.test  Makefile  README.md  dev_requirements.txt  miner.config.js  miner_testnet.config.js  protocol.py  pyproject.toml  requirements.txt  setup.py  start_miner.py  start_validator.py  subnet_links.json  validator.config.js  validator_testnet.config.js
.github/workflows/: build.yml  cache_venv.yml  ci.yml  lint.yml  reusable_cache.yml
base_miner/: explain.py  get_data.py  model.py  predict.py  scheduler.py
base_miner/mining_models/: base_lstm_new.h5
docs/: Release Notes.md  miners.md  running_on_mainnet.md  running_on_testnet.md  validators.md
docs/miners/: mainnet.md  testnet.md
docs/otf_default/: running_on_staging.md
docs/otf_default/stream_tutorial/: README.md
docs/validators/: mainnet.md  testnet.md
mining_models/: base_lstm_new.h5
neurons/: miner.py  scheduler.py  utils.py  validator.py
oracle/: dendrite.py  protocol.py
oracle/miners/: forward.py  miner.py
oracle/utils/: bittensor.py  classes.py  general.py  timestamp.py
oracle/validators/: reward.py  reward_experimental.py  validator.py  weight_setter.py
predictionnet/: __init__.py  protocol.py
predictionnet/api/: __init__.py  example.py  exporter.py  get_query_axons.py  metagraph.py  prediction.py
predictionnet/base/: miner.py  neuron.py  validator.py
predictionnet/utils/: bittensor.py  classes.py  config.py  dataset_manager.py  general.py  huggingface.py  miner_hf.py  timestamp.py  uids.py
predictionnet/validator/: forward.py  reward.py
requirements/: requirements.txt
scripts/: entrypoint.sh  install_staging.sh  run_local_network.sh  setup_wallets.sh
snpOracle/: __init__.py  protocol.py  utils.py
snpOracle/miners/: forward.py  miner.py
snpOracle/utils/: helpers.py  logging.py  time.py
snpOracle/validators/: oracle.py  reward.py  validator.py
snp_oracle/: __init__.py
snp_oracle/base_miner/: get_data.py  model.py  predict.py
snp_oracle/neurons/: miner.py  validator.py
snp_oracle/predictionnet/: __init__.py  protocol.py
snp_oracle/predictionnet/api/: __init__.py  example.py  get_query_axons.py  prediction.py
snp_oracle/predictionnet/base/: miner.py  neuron.py  validator.py
snp_oracle/predictionnet/utils/: __init__.py  bittensor.py  classes.py  config.py  dataset_manager.py  general.py  huggingface.py  miner_hf.py  misc.py  timestamp.py
snp_oracle/predictionnet/validator/: __init__.py  forward.py  reward.py
tests/: helpers.py  test_package.py  test_template_validator.py
tests/unit/: test_dataset_manager.py
utils/: helpers.py  logging.py  time.py
validator/: oracle.py
validators/: __init__.py  forward.py  helpers.py  new_validator.py  oracle.py  reward.py  validator.py  weight_setter.py
