[tool.poetry]
name = "predictionnet"
version = "2.2.1"
description = ""
authors = ["Foundry Digital"]
readme = "README.md"

[tool.poetry.dependencies]
# Python version - 3.9, 3.10, 3.11
python = ">= 3.9, < 3.12"

# Copied from requirements.txt
bittensor = "7.4.0"
huggingface_hub = "0.22.2"
tensorflow = "2.17.0"
wandb = "0.16.6"
yfinance = "0.2.37"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pre-commit-hooks = "5.0.0"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"
flake8 = "^7.1.1"
pytest = "^8.3.3"

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
skip = [
    ".venv",
    ".git",
    ".mypy_cache",
    "build",
    "dist",
]


#[tool.flake8]
# Refer to the `.flake8` file


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
