[tool.poetry]
name = "snp_oracle"
version = "3.0.2"
description = ""
authors = ["Foundry Digital"]
readme = "README.md"

[tool.poetry.dependencies]
# ^1.2.3 means >=1.2.3 and <2.0.0
# ~1.2.3 means >=1.2.3 and <1.3.0

# Python version - 3.9, 3.10, 3.11
python = ">3.9.1,<3.12"

# Bittensor Version Strict
bittensor = "8.5.1"

# Bittensor Dependencies We Also Need
setuptools = "~70.0.0"
pydantic = "^2.3.0"
numpy = ">=2.0.1,<2.1.0"

# Subnet Specific Dependencies
torch = "^2.5.1"
ta = "^0.11.0"
joblib = "^1.4.2"
pandas = "^2.2.3"
pytz = "^2024.2"
tensorflow = "^2.18.0"
yfinance = "0.2.37"
huggingface-hub = "^0.27.0"
loguru = "^0.7.3"
pyarrow = "^18.1.0"
pandas-market-calendars = "^4.4.2"
python-dotenv = "^1.0.1"
scikit-learn = "^1.6.0"
wandb = "^0.19.1"
cryptography = ">=43.0.1,<43.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit-hooks = "5.0.0"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
rich = "^13.9.4"
transformers = "^4.47.1"
template = "^0.7.6"
starlette = "~0.37.2"
pytest = "^8.3.4"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
  | mining_models
  | contrib
  | scripts
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
skip = [
    ".venv",
    ".git",
    ".mypy_cache",
    "build",
    "dist",
    "docs",
    "mining_models",
    "contrib",
    "scripts",
]

#[tool.flake8]
# Refer to the `.flake8` file
